deploy/kubernetes/apis4lawenforcement-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apis4lawenforcementservice
  namespace: apis4lawenforcement
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apis4lawenforcement
    microservice: app
